--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,4 +16,5 @@ build-backend = "uv_build"
 day1 = "aoc2025.day01.main:main"
 day2 = "aoc2025.day02.main:main"
 day3 = "aoc2025.day03.main:main"
+day4 = "aoc2025.day04.main:main"
 all = "aoc2025:main"
