--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,4 +17,5 @@ day1 = "aoc2025.day01.main:main"
 day2 = "aoc2025.day02.main:main"
 day3 = "aoc2025.day03.main:main"
 day4 = "aoc2025.day04.main:main"
+day5 = "aoc2025.day05.main:main"
 all = "aoc2025:main"
