--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,4 +18,5 @@ day2 = "aoc2025.day02.main:main"
 day3 = "aoc2025.day03.main:main"
 day4 = "aoc2025.day04.main:main"
 day5 = "aoc2025.day05.main:main"
+day6 = "aoc2025.day06.main:main"
 all = "aoc2025:main"
