--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,4 +19,5 @@ day3 = "aoc2025.day03.main:main"
 day4 = "aoc2025.day04.main:main"
 day5 = "aoc2025.day05.main:main"
 day6 = "aoc2025.day06.main:main"
+day7 = "aoc2025.day07.main:main"
 all = "aoc2025:main"
